--- a/scss/cadenza.scss
+++ b/scss/cadenza.scss
@@ -27,7 +27,7 @@
     'modules/_fieldsets',
     'modules/tables/_module',
     'modules/_state',
-    'modules/_panels',
+    'modules/panels/_module',
     'modules/_alerts';
     /* 'modules/_animations'; */
 
