--- a/scss/settings/_settings.scss
+++ b/scss/settings/_settings.scss
@@ -29,7 +29,7 @@ $color-secondary: #E74C30 !default;
 $color-dark: #363636 !default;
 $color-light: #EFEFEF !default;
 $color-gray: #525252 !default;
-$color-gray-light: #ADADAD !default;
+$color-gray-light: #EFEFEF !default;
 
 $color-success: #96CC69 !default;
 $color-warning: #FFCC5C !default;
@@ -329,17 +329,17 @@ $alert-use-radius: true !default;
 $alert-type-scale: -1 !default;
 
 // Panel Settings
-$panel-style: normal !default;
-$panel-theme: normal !default;
-$panel-padding: $x-rem !default;
-$panel-header-padding: $panel-padding !default;
-$panel-section-padding: $panel-padding !default;
-$panel-footer-padding: $panel-padding !default;
-$panel-border-width: 1px !default;
-$panel-margin-bottom: $x !default;
-$panel-use-radius: $form-use-radius !default;
-$panel-radius: $form-radius !default;
-$panel-type-scale: 0 !default;
+// $panel-style: normal !default;
+// $panel-theme: normal !default;
+// $panel-padding: $x-rem !default;
+// $panel-header-padding: $panel-padding !default;
+// $panel-section-padding: $panel-padding !default;
+// $panel-footer-padding: $panel-padding !default;
+// $panel-border-width: 1px !default;
+// $panel-margin-bottom: $x !default;
+// $panel-use-radius: $form-use-radius !default;
+// $panel-radius: $form-radius !default;
+// $panel-type-scale: 0 !default;
 
 // Animation Settings
 $animation-duration: 0.5s !default;
