--- a/scss/cadenza.scss
+++ b/scss/cadenza.scss
@@ -27,8 +27,8 @@
     'modules/_fieldsets',
     'modules/tables/_module',
     'modules/_state',
-    'modules/panels/_module',
-    'modules/_alerts';
+    'modules/panels/_module';
+    /* 'modules/_alerts'; */
     /* 'modules/_animations'; */
 
 /* Import Extensions */
