--- a/scss/modules/type/_module.scss
+++ b/scss/modules/type/_module.scss
@@ -59,6 +59,8 @@ $type-abbr-transform: uppercase !default;
 // Anchors
 $type-anchor-style: default !default;
 $type-anchor-theme: default !default;
+$type-anchor-decoration: underline !default;
+$type-anchor-decoration-hover: underline !default;
 $type-anchor-color: $color-primary !default;
 $type-anchor-color-light: $color-light !default;
 
