--- a/scss/modules/type/_themes.scss
+++ b/scss/modules/type/_themes.scss
@@ -71,7 +71,15 @@
 }
 
 %ext-anchor-default {
-	text-decoration: underline;
+	text-decoration: $type-anchor-decoration;
+
+	&:hover {
+		text-decoration: $type-anchor-decoration-hover;
+	}
+
+	> img {
+		border: none;
+	}
 }
 
 %theme-anchor-default {
