--- a/scss/cadenza.scss
+++ b/scss/cadenza.scss
@@ -18,7 +18,7 @@
     'modules/grid/_module',
     'modules/_layers',
     'modules/type/_module',
-    'modules/_nav',
+    'modules/nav/_module',
     'modules/_tabs',
     'modules/_dropdowns',
     'modules/buttons/_module',
