--- a/scss/modules/nav/_classes.scss
+++ b/scss/modules/nav/_classes.scss
@@ -3,3 +3,20 @@
 // ==============
 
 // Nav Classes
+nav, .nav {
+	&, &.vertical { @extend %nav; }
+
+	> h1, > h2, > h3, > h4, > h5, > h6, > hgroup {
+		@extend %nav-header;
+	}
+
+	ul li {
+		&.separator, &.hr { @extend %nav-separator; }
+	}
+
+	&.horizontal { 
+		@extend %nav-horizontal;
+
+		&.full { @extend %nav-horizontal-full; }
+	}
+}
