--- a/scss/modules/nav/_module.scss
+++ b/scss/modules/nav/_module.scss
@@ -2,7 +2,17 @@
 // Nav Module
 // =============
 
-// Nav Settings
+// Navigation Settings
+$nav-style: default !default;
+$nav-theme: default !default;
+$nav-color: $type-anchor-color !default;
+$nav-list-padding: 0 !default;
+$nav-list-item-padding: 0 !default;
+$nav-anchor-padding: 0.5rem !default;
+$nav-header-padding: $nav-anchor-padding !default;
+$nav-separator-color: $color-gray-light !default;
+$nav-separator-width: 1px !default;
+$nav-separator-margin: 0.25rem 0 !default;
 
 // Imports
 @import
