Nav module styling continued

--- a/scss/modules/nav/_classes.scss
+++ b/scss/modules/nav/_classes.scss
@@ -4,6 +4,8 @@
 
 // Nav Classes
 nav, .nav {
+	@include nav-style();
+	
 	&, &.vertical { @extend %nav; }
 
 	> h1, > h2, > h3, > h4, > h5, > h6, > hgroup {
