--- a/scss/settings/_settings.scss
+++ b/scss/settings/_settings.scss
@@ -261,8 +261,8 @@ $field-margin-bottom: $fieldset-margin-bottom !default;
 // $table-cell-border-width: $table-border-width !default;
 
 // Navigation Settings
-$nav-style: normal !default;
-$nav-theme: normal !default;
+// $nav-style: normal !default;
+// $nav-theme: normal !default;
 $nav-ul-padding: 0 !default;
 $nav-li-padding: 0 !default;
 $nav-a-padding: $x-rem / 2 !default;
